# aoc-2022

./: .pdm.toml  pyproject.toml
src/day_01/: puzzle_1.py  puzzle_2.py  test_puzzle_1.py  test_puzzle_2.py
src/day_02/: puzzle_1.py  puzzle_2.py  test_puzzle_1.py  test_puzzle_2.py
src/day_03/: puzzle_1.py  puzzle_2.py  test_puzzle_1.py  test_puzzle_2.py
src/day_04/: puzzle_1.py  puzzle_2.py  test_puzzle_1.py  test_puzzle_2.py
